hphp/hack/test/typecheck/references/strict_reference2.php.exp
File "strict_reference2.php", line 4, characters 15-15:
An expression is expected here. (Parsing[1002])
